1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMHOME): Default to 1998-08-17.
	Include Makefile.appl from $(SWARMHOME)/etc/swarm.

1998-04-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* FoodSpace.h: Include space/Discrete2d.h instead of space.h.

1998-03-18  Alex Lancaster  <alex@santafe.edu>

	* *.[hm]: Reformatting throughout.
	
	* ModelSwarm.m: Removed irrelevant import of <simtools.h> - not
	used.

	* FoodSpace.h: Removed irrelevant import of <simtools.h>.

	* Bug.h: Removed irrelevant import of <space.h>.

	* Bug.m: Import "FoodSpace.h" as implementation refers to it.

1998-02-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Bug.m, FoodSpace.m: Include random.h instead of simtools.h. 
	Reformatting throughout.

1998-02-23  Alex Lancaster  <alex@santafe.edu>

	* ModelSwarm.h: Include from objectbase/ instead of swarmobject/
	
	* ModelSwarm.m ([ModelSwarm -createActions]): Changed storage
	calls allocation to use the current Swarm (self) as the basis for
	storage allocation, rather than an explicit ([self -getZone])
	call.

1998-02-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Bug.h: Include from objectbase/ instead of swarmobject/.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* main.m (main): Constify argv.

1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMHOME): Don't define if already defined.
